tests/suite/snapshots/suite__check__tests__check__bad_procedure_call_1.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_procedure_call_1.xi:2:5]
   │
 2 │     foo()
   ·     ──┬──  
   ·       ╰──── Not a procedure
───╯

